# mdream

./: .dockerignore  .gitattributes  .gitignore  BREAKING_CHANGES.md  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.core  Dockerfile.crawl  README.md  TODO.md  action.yml  build.config.ts  eslint.config.js  github-md-spec.html  inspo.md  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.claude/skills/: skilld-lock.yaml
.github/fixtures/: api.html  docs.html  index.html
.github/workflows/: bundle-size-comment.yml  bundle-size.yml  fuzz.yml  release-binaries.yml  release-cargo.yml  release-docker.yml  release-native.yml  release-patch.yml  release.yml  test-action.yml  test.yml  write-bundle-size.yml
.todo/: buffer-control.ts  content-analysis.ts  content-relevance-streaming.ts  content-relevance.tesut.ts  content-relevance.ts  density-tracking.ts  heuristic-relevance.ts  tree-relevance.ts
bench/: README.md  benchmark-all.ts  benchmark.ts  cli-compare.sh  compare.bench.ts  genFixtures.ts  perf-ci.mjs  results.json  token-compare.ts  token-usage.ts  vitest.config.ts
bench/bundle/: analyze.ts  build.config.ts  bundle-report.ts  bundles.ts  last.json  perf-report.ts  update.ts
bench/rust-compare/: Cargo.toml
bench/rust-compare-fast/: Cargo.toml
bench/rust-compare-fast/src/: main.rs
bench/rust-compare/src/: main.rs
crates/: Cargo.toml  build-pgo.sh
crates/core/: Cargo.toml  PLAN.md  README.md
crates/core/benches/: convert_bench.rs  diff_output.rs  token_cost.rs
crates/core/fuzz/: .gitignore  Cargo.toml
crates/core/fuzz/corpus/fuzz_streaming_chunks/: utf8-rewrite
crates/core/fuzz/fuzz_targets/: fuzz_html_to_markdown.rs  fuzz_options.rs  fuzz_splitter.rs  fuzz_streaming.rs  fuzz_streaming_chunks.rs
crates/core/src/: bin.rs  consts.rs  convert.rs  entities.rs  entities_generated.rs  helpers.rs  lib.rs  markdown_processor.rs  parse.rs  scan.rs  selector.rs  splitter.rs  tags.rs  tailwind.rs  types.rs  url.rs
crates/core/src/convert/: mod.rs  output.rs  parse.rs  plugins.rs
crates/core/tests/: conversion.rs  depth_cap.rs  depth_limit.rs  end_tag_recovery.rs  head_autoclose.rs  implied_end_tags.rs  select_option.rs  splitter.rs  streaming_drain.rs  template_parsing.rs  templates.rs
crates/core/tests/fixtures/: mdn-array.html  react-learn.html  vuejs-docs.html
crates/edge/: Cargo.toml
crates/edge/src/: lib.rs
crates/edge/test-worker/: package.json  tsconfig.json  vitest.config.ts  wrangler.toml
crates/edge/test-worker/src/: index.ts
crates/edge/test-worker/test/: pack-e2e.test.ts  worker.test.ts
crates/edge/tests/: web.rs
crates/node/: .gitignore  Cargo.toml  false  index.d.ts  index.js  package.json  wrapper.ts
crates/node/.cargo/: config.toml
crates/node/npm/android-arm-eabi/: README.md  package.json
crates/node/npm/android-arm64/: README.md  package.json
crates/node/npm/darwin-arm64/: README.md  package.json
crates/node/npm/darwin-x64/: README.md  package.json
crates/node/npm/freebsd-x64/: README.md  package.json
crates/node/npm/linux-arm-gnueabihf/: README.md  package.json
crates/node/npm/linux-arm64-gnu/: README.md  package.json
crates/node/npm/linux-arm64-musl/: README.md  package.json
crates/node/npm/linux-x64-gnu/: README.md  package.json
crates/node/npm/linux-x64-musl/: README.md  package.json
crates/node/npm/wasm32-wasi/: README.md  package.json
crates/node/npm/win32-arm64-msvc/: README.md  package.json
crates/node/npm/win32-x64-msvc/: README.md  package.json
crates/node/scripts/: move-artifacts.mjs
crates/node/src/: lib.rs
crates/node/test/fixtures/: wikipedia-largest.html
crates/node/test/fixtures/llms-cli/blog/: post1.html
crates/node/test/integration/: fetch.test.ts
crates/node/test/integration/__snapshots__/: wiki-chunk-0.md  wiki-chunk-5.md  wiki-chunk-8.md  wiki-chunk-final.md
crates/node/test/unit/: escaped-backslash.test.ts  malformed-html.test.ts
crates/node/test/unit/nodes/: blockquote.test.ts  code.test.ts  definition-lists.test.ts  entities.test.ts  escaping.test.ts  headings.test.ts  hr.test.ts  html-to-markdown-parity.test.ts  image.test.ts  inline.test.ts  links.test.ts  lists.test.ts  pretty.test.ts  quote-handling.test.ts  spacing.test.ts  table.test.ts  titles.test.ts
crates/node/test/unit/plugins/: frontmatter.test.ts  isolate-main.test.ts  query-selector.test.ts  tailwind.test.ts
crates/node/test/unit/streaming/: streaming.test.ts
crates/node/test/unit/templates/: break-outs.test.ts  combined.test.ts  hacker-news.test.ts  nasa.test.ts  nav.test.ts  recipes.test.ts  wiki.test.ts
docs/: package.json  plugin-api.md  plugins.md  tailwind-addon.md
docs/app/: app.vue
examples/nextjs/: next.config.ts  package.json
examples/nuxt/: README.md  nuxt.config.ts  package.json
examples/vite-ssr-ts/: package.json  server.js  tsconfig.json
examples/vite-ssr-vue/: package.json  server.js  vite.config.js
playground/: app.vue  logger.ts  nuxt.config.ts  package.json
playground/app/: error.vue
scripts/: build-wasm-edge.mjs  crawl.ts  generate-html-entities.mjs  minimal-from-first-header.sh  seed.sh  sync-cargo-version.mjs
src/: buffer-region.ts  cli.ts  const.ts  converter.ts  handler-utils.ts  htmlStreamAdapter.ts  index.ts  markdown-processor.ts  markdown.ts  parse.ts  parser.ts  plugin-processor.ts  plugins.ts  stream.ts  tags.ts  types.ts  utils.ts
src/libs/: query-selector.ts
src/pluggable/: plugin.ts
src/plugins/: extraction.ts  filter.ts  frontmatter.ts  isolate-main.ts  pre-code.ts  readability.ts  tailwind.ts
src/preset/: minimal.ts
src/workers/: queue.ts  types.ts  worker-pool.ts
test/: github-markdown.html  github-markdown.md  index.test.ts  nodes.test.ts  streaming.test.ts  table.md
test/fixtures/: test-origin.html
test/integration/: fetch.test.ts  worker-integration.test.ts
test/unit/: blockquote.test.ts  buffer-region-core.test.ts  buffer-region-types.test.ts  handler-utils.test.ts  hr.test.ts  html-to-markdown-parity.test.ts  malformed-html.test.ts  parse.test.ts  pretty.test.ts  table.test.ts  (+3 more)
(+100 files in other folders)
