[workspace]
members = [
  "core",
  "node",
  "edge"
]
exclude = ["core/fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.80"
repository = "https://github.com/harlan-zw/mdream"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "unwind"

[profile.wasm]
inherits = "release"
opt-level = "z"
