[package]
name = "mdream-edge"
version = "1.4.0"

edition.workspace = true

description = "WebAssembly edge runtime bindings for mdream HTML-to-Markdown converter"

license.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # wasm-pack's bundled wasm-opt is too old; run wasm-opt manually post-build

[lib]
crate-type = [ "cdylib" ]

[dependencies]
mdream = { path = "../core" }
wasm-bindgen = "0.2.123"
js-sys = "0.3.100"

[lints]
workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.73"
