[package]
name = "mdream-node"
version = "1.0.6"

edition.workspace = true

description = "NAPI bindings for mdream. Thin wrapper exposing the Rust engine to Node.js."

license.workspace = true

[lib]
crate-type = [ "cdylib" ]

[dependencies]
napi = { version = "3.8.5", default-features = false, features = [ "napi9" ] }
napi-derive = "3.5.4"
mdream = { path = "../core" }

[lints]
workspace = true

[build-dependencies]
napi-build = "2.3.1"
